feat(workflow): add new modules (#44)
