# internal/handlers/http.module.go
@@ -5,7 +5,6 @@ import (
 
 	"github.com/google/jsonschema-go/jsonschema"
 
-	"github.com/a-novel/service-narrative-engine/internal/models"
 	"github.com/a-novel/service-narrative-engine/internal/services"
 )
 
@@ -16,7 +15,6 @@ type Module struct {
 	Preversion  string            `json:"preversion,omitempty"`
 	Description string            `json:"description"`
 	Schema      jsonschema.Schema `json:"schema"`
-	UI          models.ModuleUi   `json:"ui"`
 	CreatedAt   time.Time         `json:"createdAt"`
 }
 
@@ -28,7 +26,6 @@ func loadModule(s *services.Module) Module {
 		Preversion:  s.Preversion,
 		Description: s.Description,
 		Schema:      s.Schema,
-		UI:          s.UI,
 		CreatedAt:   s.CreatedAt,
 	}
 }
